# Curso_TAIA

./: Problema de optimización.md  README.md  main.py  problema1.ipynb  pyproject.toml
