[project]
name = "curso-taia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gurobipy>=13.0.2",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pulp>=3.3.2",
    "scipy>=1.18.0",
    "tqdm>=4.68.4",
]
